# sparkl

./: .gitignore  Cargo.toml  LICENSE  README.md  publish.sh
crates-ptx/: Cargo.toml
crates-ptx/gen-ptx/: Cargo.toml  build.rs
crates-ptx/pinned-dependencies/: Cargo.toml
crates-ptx/sparkl2d-core-ptx/: Cargo.toml
crates-ptx/sparkl2d-kernels-ptx/: Cargo.toml
crates-ptx/sparkl3d-core-ptx/: Cargo.toml
crates-ptx/sparkl3d-kernels-ptx/: Cargo.toml
crates/sparkl2d/: Cargo.toml  build.rs
crates/sparkl2d-core/: Cargo.toml
crates/sparkl2d-f64/: Cargo.toml
crates/sparkl2d-kernels/: Cargo.toml
crates/sparkl3d/: Cargo.toml  build.rs
crates/sparkl3d-core/: Cargo.toml
crates/sparkl3d-f64/: Cargo.toml
crates/sparkl3d-kernels/: Cargo.toml
examples2d/: Cargo.toml  basic2.rs  cube_through_sand2.rs  cutting_sand2.rs  elasticity2.rs  fluids2.rs  helper.rs  l_panel2.rs  main.rs  wheel2.rs
examples3d/: Cargo.toml  conveyor_belt3.rs  cube_through_sand3.rs  cutting_sand3.rs  fluids3.rs  helper.rs  main.rs  sand3.rs  sand_penetration3.rs  wheel3.rs
resources/: sparkl2d-kernels.ptx  sparkl3d-kernels.ptx
sparkl-dim-independent/: Cargo.toml
sparkl-dim-independent/src/: cuda_timings.rs  lib.rs
src/: lib.rs
src/cuda/: cuda_collider_set.rs  cuda_mpm_pipeline.rs  cuda_particle_kernels.rs  cuda_particle_model.rs  cuda_particle_model_set.rs  cuda_particle_set.rs  cuda_rigid_world.rs  cuda_sparse_grid.rs  cuda_vec.rs  generate_rigid_particles.rs  mod.rs
src/dynamics/: grid_node.rs  mod.rs  particle.rs  particle_model.rs  particle_set.rs  phase_field.rs
src/dynamics/models/: constitutive_model.rs  elasticity_corotated_linear.rs  elasticity_neo_hookean.rs  eos_monaghan_sph.rs  external_model.rs  failure_maximum_stress.rs  failure_model.rs  mod.rs  plastic_model.rs  plasticity_drucker_prager.rs  plasticity_nacc.rs  plasticity_rankine.rs  plasticity_snow.rs
src/dynamics/solver/: eigenerosion.rs  fluids_volume.rs  grid_to_particle.rs  grid_update.rs  mls_solver.rs  mod.rs  mpm_hooks.rs  particle_to_grid.rs  timestep_estimator.rs
src/dynamics/timestep/: elasticity_sound_speed_timestep_bound.rs  mod.rs
src/geometry/: mod.rs  sp_grid.rs
src/pipelines/: mod.rs  mpm_pipeline.rs
src/utils/: mod.rs  morton2.rs  physics.rs  prefix_sum.rs
src_core/: lib.rs  rigid_particles.rs
src_core/dynamics/: cdf.rs  mod.rs  particle.rs
src_core/dynamics/models/: constitutive_model.rs  elasticity_corotated_linear.rs  elasticity_neo_hookean.rs  eos_monaghan_sph.rs  failure_maximum_stress.rs  failure_model.rs  mod.rs  plastic_model.rs  plasticity_drucker_prager.rs  plasticity_nacc.rs  plasticity_rankine.rs  plasticity_snow.rs
src_core/dynamics/solver/: kernel.rs  mod.rs  solver_parameters.rs
src_core/dynamics/timestep/: elasticity_sound_speed_timestep_bound.rs
src_core/utils/: mod.rs  morton3.rs  physics.rs  real_struct.rs
src_kernels/: gpu_cdf.rs  gpu_collider.rs  gpu_constitutive_model.rs  gpu_grid.rs  gpu_particle_model.rs  gpu_plastic_model.rs  gpu_rigid_world.rs  gpu_timestep.rs  lib.rs
src_kernels/cuda/: atomic.rs  fluids_volume.rs  g2p2g.bak.rs  g2p2g.rs  grid_update.rs  hashmap.rs  mod.rs  particle_updater.rs  prefix_sum.rs  reset_grid.rs  sort.rs  timestep.rs  update_cdf.rs
