[workspace]
members = [ "./pinned-dependencies", "./sparkl3d-core-ptx", "./gen-ptx", "./sparkl3d-kernels-ptx", "./sparkl2d-core-ptx", "./sparkl2d-kernels-ptx" ]
resolver = "2"
[patch.crates-io]
sparkl3d-core-ptx = { path = "./sparkl3d-core-ptx" }
sparkl3d-kernels-ptx = { path = "./sparkl3d-kernels-ptx" }
sparkl2d-core-ptx = { path = "./sparkl2d-core-ptx" }
sparkl2d-kernels-ptx = { path = "./sparkl2d-kernels-ptx" }

[profile.release]
#codegen-units = 1
