[package]
name    = "sparkl-examples-2d"
version = "0.1.0"
authors = [ "Sébastien Crozet <developer@crozet.re>" ]
edition = "2018"
default-run = "examples2d"

[features]
cuda = [ "sparkl2d/cuda", "sparkl2d/build-ptx" ]

[dependencies]
Inflector  = "0.11"
nalgebra = "0.31"
rapier_testbed2d = "0.15"
rapier2d = "0.15"
oorandom = "11"
log = "0.4"
env_logger = "0.9"

[dependencies.sparkl2d]
path = "../crates/sparkl2d"
features = [ "rapier-testbed", "serde-serialize", "cuda", "build-ptx" ]

[[bin]]
name = "examples2d"
path = "./main.rs"
