[package]
name    = "sparkl-examples-2d"
version = "0.2.0"
authors = [ "Sébastien Crozet <developer@crozet.re>" ]
edition = "2018"
default-run = "examples2d"

[features]
cuda = [ "sparkl2d/cuda" ]

[dependencies]
Inflector  = "0.11"
nalgebra = "0.32"
rapier_testbed2d = "0.17.0"
rapier2d = "0.17.2"
oorandom = "11"
serde = { version = "1", features = [ "derive" ]}
serde_json = { version = "1", features = [ "preserve_order" ] }
bincode = "1"
indexmap = { version = "1", features = [ "serde" ] }
uuid = "1"
env_logger = "0.10"
log = "0.4"

[dependencies.sparkl2d]
path = "../crates/sparkl2d"
features = [ "rapier-testbed", "serde-serialize" ]

[[bin]]
name = "examples2d"
path = "./main.rs"
