[package]
name    = "sparkl-examples-3d"
version = "0.2.0"
authors = [ "Sébastien Crozet <developer@crozet.re>" ]
edition = "2018"
default-run = "examples3d"

[features]
cuda = [ "sparkl3d/cuda" ]

[dependencies]
Inflector  = "0.11"
nalgebra = "0.32"
rapier_testbed3d = "0.17"
rapier3d = "0.17"
oorandom = "11"
serde = { version = "1", features = [ "derive" ]}
serde_json = { version = "1", features = [ "preserve_order" ] }
bincode = "1"
indexmap = { version = "1", features = [ "serde" ] }
uuid = "1"
env_logger = "0.10"
log = "0.4"

[dependencies.sparkl3d]
path = "../crates/sparkl3d"
features = [ "rapier-testbed", "serde-serialize" ]

[[bin]]
name = "examples3d"
path = "./main.rs"
