[package]
name    = "sparkl-examples-3d"
version = "0.2.0"
authors = [ "Sébastien Crozet <developer@crozet.re>" ]
edition = "2018"
default-run = "examples3d"

[features]
cuda = [ "sparkl3d/cuda" ]

[dependencies]
Inflector  = "0.11"
nalgebra = { git = "https://github.com/Vollkornaffe/nalgebra.git", rev = "dd44414a8a27224c4a3d6e68d9368e3b3483d9ce" }
rapier_testbed3d = { version = "0.17.0", git = "https://github.com/dimforge/rapier.git", rev = "e9ea2ca10b3058a6ac2d7f4b79d351ef18ad3c06" }
rapier3d = { version = "0.17.2", git = "https://github.com/dimforge/rapier.git", rev = "e9ea2ca10b3058a6ac2d7f4b79d351ef18ad3c06" }
oorandom = "11"
serde = { version = "1", features = [ "derive" ]}
serde_json = { version = "1", features = [ "preserve_order" ] }
bincode = "1"
indexmap = { version = "1", features = [ "serde" ] }
uuid = "1"
env_logger = "0.10"
log = "0.4"

[dependencies.sparkl3d]
path = "../crates/sparkl3d"
features = [ "rapier-testbed", "serde-serialize" ]

[[bin]]
name = "examples3d"
path = "./main.rs"
