[package]
name    = "sparkl-dim-independent"
version = "0.3.0"
authors = [ "Sébastien Crozet <developer@crozet.re>" ]
description = "Dimension-independent utility for sparkl."
documentation = "http://docs.rs/sparkl2d" # TODO: this is a problem?
homepage = "http://sparkl.rs"
repository = "https://github.com/dimforge/sparkl"
readme = "README.md"
categories = [ "science", "game-development", "mathematics", "simulation", "wasm"]
keywords = [ "physics", "dynamics", "rigid", "real-time", "joints" ]
license = "Apache-2.0"
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = [ "f32" ]
f32 = []
cuda = [ "cust" ]

[dependencies]
instant = "0.1"

# CUDA
cust = { version = "0.3", optional = true }