[package]
name    = "gen-ptx"
version = "0.1.0"
authors = [ "Sébastien Crozet <developer@crozet.re>" ]
description = "3-dimensional physics engine in Rust."
documentation = "http://docs.rs/sparkl3d"
homepage = "http://sparkl.rs"
repository = "https://github.com/dimforge/sparkl"
readme = "README.md"
categories = [ "science", "game-development", "mathematics", "simulation", "wasm"]
keywords = [ "physics", "dynamics", "rigid", "real-time", "joints" ]
license = "Apache-2.0"
edition = "2018"
include = [ "../../resources/sparkl3d-kernels.ptx"]
resolver = "2"
publish = false

[badges]
maintenance = { status = "actively-developed" }

[dependencies]

[build-dependencies]
cuda_builder = { version = "0.3" }