[package]
name = "pinned-dependencies"
version = "0.1.0"
edition = "2021"
description = "Auxiliary crate for pinning dependencies of dependencies for the memebers of the parent workspace. Note that cargo 1.64 can deal with this on workspace level directly."

[lib]
path = "./empty_lib.rs"

# Some of these are dependencies of dependencies.
# We need to fix the versions because cargo will chose semver compatible versions
# which may not be compilible with the toolchain we're using.
[dependencies]
approx = "=0.5.1"
arrayvec = "=0.7.2"
autocfg = "=1.1.0"
bitflags = "=1.3.2"
build-helper = "=0.1.1"
bytemuck = "=1.12.3"
bytemuck_derive = "=1.3.0"
cc = "=1.0.78"
cfg-if = "=1.0.0"
cuda_builder = "=0.3.0"
cuda_std = "=0.2.2"
cuda_std_macros = "=0.2.0"
curl = "=0.4.44"
curl-sys = "=0.4.59"
cust = "=0.3.2"
cust_core = "=0.1.1"
cust_derive = "=0.2.0"
cust_raw = "=0.11.3"
downcast-rs = "=1.2.0"
either = "=1.8.0"
filetime = "=0.2.19"
find_cuda_helper = "=0.2.0"
glam = "=0.20.5"
glob = "=0.3.1"
half = "=1.8.2"
itoa = "=1.0.5"
jobserver = "=0.1.25"
lazy_static = "=1.4.0"
libc = "=0.2.139"
libm = "=0.2.6"
libz-sys = "=1.1.8"
log = "=0.4.17"
lzma-sys = "=0.1.20"
matchers = "=0.1.0"
mint = "=0.5.9"
nu-ansi-term = "=0.46.0"
num-complex = "=0.4.2"
num-derive = "=0.3.3"
num-integer = "=0.1.45"
num-traits = "=0.2.15"
nvvm = "=0.1.1"
once_cell = "=1.17.0"
oorandom = "=11.1.3"
openssl-probe = "=0.1.5"
openssl-sys = "=0.9.80"
overload = "=0.1.1"
paste = "=1.0.11"
pin-project-lite = "=0.2.9"
pkg-config = "=0.3.26"
proc-macro2 = "=1.0.49"
quote = "=1.0.23"
regex = "=1.7.1"
regex-automata = "=0.1.10"
regex-syntax = "=0.6.28"
rustc-demangle = "=0.1.21"
rustc_codegen_nvvm = "=0.3.0"
rustc_codegen_nvvm_macros = "=0.1.0"
rustc_version = "=0.4.0"
ryu = "=1.0.12"
schannel = "=0.1.21"
semver = "=0.6.0"
semver-parser = "=0.7.0"
serde = "=1.0.152"
serde_derive = "=1.0.152"
serde_json = "=1.0.91"
sharded-slab = "=0.1.4"
smallvec = "=1.10.0"
socket2 = "=0.4.7"
sparkl2d-core = "=0.3.0"
sparkl2d-kernels = "=0.3.0"
sparkl3d-core = "=0.3.0"
sparkl3d-kernels = "=0.3.0"
syn = "=1.0.107"
tar = "=0.4.38"
thread_local = "=1.1.4"
tracing = "=0.1.37"
tracing-attributes = "=0.1.23"
tracing-core = "=0.1.30"
tracing-log = "=0.1.3"
tracing-subscriber = "=0.3.16"
typenum = "=1.16.0"
unicode-ident = "=1.0.6"
valuable = "=0.1.0"
vcpkg = "=0.2.15"
winapi = "=0.3.9"
winapi-i686-pc-windows-gnu = "=0.4.0"
winapi-x86_64-pc-windows-gnu = "=0.4.0"
windows-sys = "=0.42.0"
windows_aarch64_gnullvm = "=0.42.1"
windows_aarch64_msvc = "=0.42.1"
windows_i686_gnu = "=0.42.1"
windows_i686_msvc = "=0.42.1"
windows_x86_64_gnu = "=0.42.1"
windows_x86_64_gnullvm = "=0.42.1"
windows_x86_64_msvc = "=0.42.1"
xattr = "=0.2.3"
xz = "=0.1.0"
xz2 = "=0.1.7"
