[package]
name    = "sparkl3d-kernels"
version = "0.3.0"
authors = [ "Sébastien Crozet <developer@crozet.re>" ]
description = "3-dimensional physics engine in Rust."
documentation = "http://docs.rs/sparkl3d"
homepage = "http://sparkl.rs"
repository = "https://github.com/dimforge/sparkl"
readme = "README.md"
categories = [ "science", "game-development", "mathematics", "simulation", "wasm"]
keywords = [ "physics", "dynamics", "rigid", "real-time", "joints" ]
license = "Apache-2.0"
edition = "2018"
publish = false
include = [ "../../resources/sparkl3d-kernels.ptx"]


[badges]
maintenance = { status = "actively-developed" }

[features]
default = [ "dim3", "f32" ]
dim3 = []
f32 = []

[lib]
path = "../../src_kernels/lib.rs"
required-features = [ "dim3", "f32" ]
crate-type = ["cdylib", "rlib"]


[dependencies]
nalgebra = { version = "0.32", default-features = false, features = [ "bytemuck", "cuda" ] }
sparkl3d-core = { version = "0.3", features = [ "cuda" ] }
cuda_std = "0.2"
bytemuck = { version = "1", features = [ "derive" ] }
parry3d = { version = "0.13", default-features = false, features = [ "required-features", "cuda" ] }
cust_core = "0.1"


[target.'cfg(not(target_os = "cuda"))'.dependencies]
cust = "0.3"
