[package]
name    = "sparkl2d"
version = "0.1.0"
authors = [ "Sébastien Crozet <developer@crozet.re>" ]
description = "3-dimensional physics engine in Rust."
documentation = "http://docs.rs/sparkl2d"
homepage = "http://sparkl.rs"
repository = "https://github.com/dimforge/sparkl"
readme = "README.md"
categories = [ "science", "game-development", "mathematics", "simulation", "wasm"]
keywords = [ "physics", "dynamics", "rigid", "real-time", "joints" ]
license = "Apache-2.0"
edition = "2018"
publish = false
include = [ "../../resources/sparkl2d-kernels.ptx"]


[badges]
maintenance = { status = "actively-developed" }

[features]
default = [ "dim2", "f32" ]
dim2 = []
f32 = []
cuda = [ "cust", "sparkl2d-kernels" ]

# Enable this feature in order to automatically rebuild the PTX kernels for Sparkl instead of using the prebuilt one.
build-ptx = [ "cuda_builder" ]

serde-serialize = [ "serde", "nalgebra/serde-serialize", "parry2d/serde-serialize", "rapier2d/serde-serialize",
                    "sparkl2d-core/serde-serialize"]

# Third-party integration.
rapier-testbed = [ "rapier_testbed2d", "graphics", "itertools" ]
rapier-harness = [ "rapier-testbed" ]
graphics = [ "bevy", "bevy_egui", "bevy_ecs" ]

[lib]
path = "../../src/lib.rs"
required-features = [ "dim2", "f32" ]



[dependencies]
sparkl2d-core = "0.1"
nalgebra = "0.31"
parry2d = "0.9"
rapier2d = "0.12"
instant = { version = "0.1", features = [ "now" ] }
bitflags = "1"
anyhow = "1"
log = "0.4"

oorandom = "11" # TODO: remove this, only for testing.

# Serialization
serde = { version = "1.0", optional = true, features = [ "derive" ]}

# Parallelism
rayon = "1"
ordered-float = "2"

# Used by sp-grid
memmap2 = "0.3"
bytemuck = "1"

# Third-party integration
rapier_testbed2d = { version = "0.12", optional = true }
bevy_egui = { version = "0.13", features = [ "multi_threaded" ], optional = true }
bevy_ecs = { version = "0.7", optional = true }
itertools = { version = "0.10", optional = true }

# CUDA
cust = { version = "0.3", optional = true }
sparkl2d-kernels = { version = "0.1", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.7", default-features = false, features = ["bevy_winit", "render", "x11"], optional = true }

# Dependencies for WASM only.
#[target.'cfg(target_arch = "wasm32")'.dependencies]
#bevy = { version = "0.6", default-features = false, features = ["bevy_winit", "render"], optional = true }
#bevy_webgl2 = { version = "0.5", optional = true }

[dev-dependencies]
oorandom = "11"

[build-dependencies]
cuda_builder = { version = "0.3", optional = true }