[package]
name    = "sparkl3d-f64"
version = "0.1.0"
authors = [ "Sébastien Crozet <developer@crozet.re>" ]
description = "3-dimensional physics engine in Rust."
documentation = "http://docs.rs/sparkl3d"
homepage = "http://sparkl.rs"
repository = "https://github.com/dimforge/sparkl"
readme = "README.md"
categories = [ "science", "game-development", "mathematics", "simulation", "wasm"]
keywords = [ "physics", "dynamics", "rigid", "real-time", "joints" ]
license = "Apache-2.0"
edition = "2018"
publish = false

[badges]
maintenance = { status = "actively-developed" }

[features]
default = [ "dim3", "f64" ]
dim3 = []
f64 = []

serde-serialize = [ "serde", "nalgebra/serde-serialize", "parry3d-f64/serde-serialize" ]

[lib]
path = "../../src/lib.rs"
required-features = [ "dim3", "f64" ]


[dependencies]
nalgebra = "0.31"
parry3d-f64 = "0.9"
instant = { version = "0.1", features = [ "now" ] }
bitflags = "1"
anyhow = "1"
log = "0.4"

# Serialization
serde = { version = "1.0", optional = true, features = [ "derive" ]}

# Parallelism
rayon = "1"
ordered-float = "2"

# Used by sp-grid
memmap2 = "0.5"
bytemuck = "1"

[dev-dependencies]
oorandom = "11"